fix: removed node_modules from emails and added data with mail-sending.js script - Mohit Paddhariya

--- a/emails/accepted.html
+++ b/emails/accepted.html
@@ -380,11 +380,11 @@
                             <table role="presentation" cellspacing="0" cellpadding="0" border="0" class="header-table">
                                 <tr>
                                     <td align="left" width="50%">
-                                        <img src="../public/nexus.png" alt="Nexus Club" class="logo-img"
+                                        <img src="https://nexjam.vercel.app/nexus.png" alt="Nexus Club" class="logo-img"
                                             style="height:68px;">
                                     </td>
                                     <td align="right" width="50%">
-                                        <img src="../public/pes.png" alt="PES University" class="logo-img"
+                                        <img src="https://nexjam.vercel.app/pes.png" alt="PES University" class="logo-img"
                                             style="height:68px;">
                                     </td>
                                 </tr>
@@ -437,8 +437,6 @@
                                         Hours | 4 Members | 1 Track</span></p>
                                 <p class="info-row"><span class="info-label">Date:</span> <span
                                         class="info-value">22<sup>nd</sup> February 2026</span></p>
-                                <p class="info-row"><span class="info-label">Team No:</span> <span
-                                        class="info-value">{{team_no}}</span></p>
                                 <p class="info-row"><span class="info-label">Venue:</span> <span class="info-value">PESU
                                         52</span></p>
                             </div>
@@ -500,17 +498,6 @@
                                             </span>
                                         </td>
                                     </tr>
-                                    <tr>
-                                        <td style="padding:8px 0;">
-                                            <span
-                                                style="display:inline-block; background-color:#ef4444; color:#fff; font-family:'Courier New',monospace; font-weight:900; font-size:10px; width:20px; height:20px; line-height:20px; text-align:center; margin-right:10px;">5</span>
-                                            <span
-                                                style="font-family:'Courier New',Courier,monospace; font-size:13px; color:#e4e4e7;">
-                                                <strong style="color:#FFD700;">Remember your team number!</strong> It
-                                                helps us with faster check-in &amp; registration on the day.
-                                            </span>
-                                        </td>
-                                    </tr>
                                 </table>
                             </div>
 
@@ -543,7 +530,7 @@
                   </v:textbox>
                 </v:roundrect>
                 <![endif]-->
-                                <a href="https://example.com" target="_blank" class="cta-button">
+                                <a href="https://forms.gle/tbhg649MURGp2FFx9" target="_blank" class="cta-button">
                                     Complete Registration →
                                 </a>
                             </div>
