--- a/emails/rejected.html
+++ b/emails/rejected.html
@@ -322,11 +322,11 @@
                             <table role="presentation" cellspacing="0" cellpadding="0" border="0" class="header-table">
                                 <tr>
                                     <td align="left" width="50%">
-                                        <img src="../public/nexus.png" alt="Nexus Club" class="logo-img"
+                                        <img src="https://nexjam.vercel.app/nexus.png" alt="Nexus Club" class="logo-img"
                                             style="height:68px;">
                                     </td>
                                     <td align="right" width="50%">
-                                        <img src="../public/pes.png" alt="PES University" class="logo-img"
+                                        <img src="https://nexjam.vercel.app/pes.png" alt="PES University" class="logo-img"
                                             style="height:68px;">
                                     </td>
                                 </tr>
